style.css
@font-face {
    font-family: "Red Hat Display";
    src: url("./assets/fonts/Red_Hat_Display/RedHatDisplay-VariableFont_wght.ttf") format("truetype");
}

:root {
    /* Colours */
    --cyan-600: hsl(192 37% 48%);
    --cyan-300: hsl(192 90% 77%);

    --slate-900: hsl(240 21% 20%);
    --slate-600: hsl(240 10% 57%);
    --slate-300: hsl(240 18% 85%);

    --white: hsl(0 0% 98%);

    /* Font sizes - will use clamp with rem */
    --fs-1:/* 64px 48px */40px;
    --fs-2:/* 40px 36px */32px;
    --fs-3:/* 16px 14px */12px;
    --fs-4:/* 18px */16px;
    --fs-5: 16px;

    /* Spacing */
    --spacing-1400: 112px;
    --spacing-1000: 80px;
    --spacing-900: 72px;
    --spacing-800: 64px;
    --spacing-700: 56px;
    --spacing-600: 48px;
    --spacing-500: 40px;
    --spacing-400: 32px;
    --spacing-300: 24px;
    --spacing-200: 16px;
    --spacing-100: 8px;
    --spacing-50: 4px;
}

*, *::before, *::after {
    box-sizing: border-box;
  }

* {
    padding: 0;
    margin: 0;
}

body {
    min-height: 100vh;
    font-family: "Red Hat Display", sans-serif;
    text-align: center;
    line-height: 1.1;
    font-size: var(--fs-4);
    font-weight: 500;
    letter-spacing: 0;
}

button {
    font: inherit;
    line-height: 1.5;
    font-size: var(--fs-5);
}

h1, h2, hgroup, button {
    font-weight: 900;
}

h1 {
    font-size: var(--fs-1);
}

h2 {
    font-size: var(--fs-2);
}

header {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: var(--spacing-600);
}

hgroup > p {
    letter-spacing: var(--spacing-500);
    font-size: var(--fs-3);
}

img, picture {
    display: block;
    max-width: 100%;
}

